# keyguard

./: .env.example  .gitignore  README.md  docker-compose.yml  example_integration.py  keyguard.db  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: main.py
app/api/v1/: admin.py  gateway.py
app/core/: config.py  logging.py
app/db/: base.py  models.py
app/schemas/: api_models.py
app/services/: rate_limit_service.py
docker/: docker-compose.yml
frontend/: app.js  index.html  style.css
keyguard/: __init__.py  __main__.py  cli.py  config.py  core.py  middleware.py  models.py
keyguard/api/: __init__.py  admin.py
keyguard/db/: __init__.py  models.py
keyguard/middleware/: gateway.py
keyguard/schemas/: __init__.py  admin.py
keyguard/services/: __init__.py  auth_service.py  memory_rate_limit.py  rate_limit_service.py
keyguard_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: init_db.py
